# NNS-Challenge

./: .gitignore  README.md  pyproject.toml
codes/: T_n-n1..1500[35].txt  find_nouns.py  find_similar.py  find_similar_questions.py  load_questions.py  questions.txt  search_through_dict.py  strip_nouns.py
