[tool.poetry]
name = "nns-challenge"
version = "0.1.0"
description = ""
authors = ["Wentao He <wentaohe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
transformers = "^4.11.3"
torch = "^1.9.1"
sentence-transformers = "^2.1.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
